--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "員工列表";
 }
 <head>
-	<link href="~/css/lostinfoindex.min.css" rel="stylesheet" />
+    <link href="~/css/lostinfoindex.min.css" rel="stylesheet" />
 </head>
 
 <main class="flex-fill position-relative">
@@ -88,27 +88,45 @@
                         <div class="collapse mb-2 ps-3 fs14px" id="collapseDepartment">
                             <div class="p-2">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="人資部" id="dept1">
+                                    <input class="form-check-input" type="checkbox" value="RS" id="dept1">
                                     <label class="form-check-label" for="dept1">
-                                        人資部
+                                        天文研究
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="資訊部" id="dept2">
+                                    <input class="form-check-input" type="checkbox" value="EX" id="dept2">
                                     <label class="form-check-label" for="dept2">
-                                        資訊部
+                                        展覽規劃
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="財務部" id="dept3">
+                                    <input class="form-check-input" type="checkbox" value="MK" id="dept3">
                                     <label class="form-check-label" for="dept3">
-                                        財務部
+                                        行銷宣傳
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="業務部" id="dept4">
+                                    <input class="form-check-input" type="checkbox" value="IT" id="dept4">
                                     <label class="form-check-label" for="dept4">
-                                        業務部
+                                        資訊系統
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="HR" id="dept5">
+                                    <label class="form-check-label" for="dept5">
+                                        行政管理
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="FN" id="dept6">
+                                    <label class="form-check-label" for="dept6">
+                                        財務會計
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="VS" id="dept7">
+                                    <label class="form-check-label" for="dept7">
+                                        導覽票務
                                     </label>
                                 </div>
                             </div>
@@ -126,21 +144,51 @@
                         <div class="collapse mb-2 ps-3 fs14px" id="collapseRole">
                             <div class="p-2">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="主管" id="role1">
+                                    <input class="form-check-input" type="checkbox" value="RS" id="role1">
                                     <label class="form-check-label" for="role1">
-                                        主管
+                                        天文研究
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="專員" id="role2">
+                                    <input class="form-check-input" type="checkbox" value="EX" id="role2">
                                     <label class="form-check-label" for="role2">
-                                        專員
+                                        展覽規劃
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="助理" id="role3">
+                                    <input class="form-check-input" type="checkbox" value="MK" id="role3">
                                     <label class="form-check-label" for="role3">
-                                        助理
+                                        行銷宣傳
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="IT" id="role4">
+                                    <label class="form-check-label" for="role4">
+                                        資訊系統
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="HR" id="role5">
+                                    <label class="form-check-label" for="role5">
+                                        行政管理
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="FN" id="role6">
+                                    <label class="form-check-label" for="role6">
+                                        財務會計
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="VS" id="role7">
+                                    <label class="form-check-label" for="role7">
+                                        導覽票務
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="MG" id="role8">
+                                    <label class="form-check-label" for="role8">
+                                        管理職
                                     </label>
                                 </div>
                             </div>
@@ -369,5 +417,5 @@
 </main>
 
 @section Scripts {
-	<script src="~/js/emp_index.js"></script>
+    <script src="~/js/emp_index.js"></script>
 }
