--- a/StarProject/Views/StarMaps/Index.cshtml
+++ b/StarProject/Views/StarMaps/Index.cshtml
@@ -7,11 +7,13 @@
 <head>
     <style>
         /* 圖片區塊固定高度 */
-        .card-img-container {
-            width: 100%;
-            height: 250px; /* 可依需求調整 */
-            overflow: hidden;
-        }
+		.card-img-container {
+			width: 100%;
+			height: 250px;
+			overflow: hidden;
+			border-top-left-radius: 1rem; /* 跟 rounded-4 對應 */
+			border-top-right-radius: 1rem; /* 跟 rounded-4 對應 */
+		}
 
         .card-img-container img {
             width: 100%;
