--- a/StarProject/Views/StarMaps/_StarMapRows.cshtml
+++ b/StarProject/Views/StarMaps/_StarMapRows.cshtml
@@ -3,7 +3,7 @@
 @foreach (var item in Model)
 {
     <div class="col rounded-lg">
-        <div class="card h-100 position-relative shadow cardDetail">
+        <div class="card h-100 position-relative shadow cardDetail rounded-4">
             <!-- Checkbox 右上角，但留一點距離 -->
             <input type="checkbox"
                    class="form-check-input position-absolute big-checkbox checkbox"
